--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -2,12 +2,8 @@
   margin: 0 auto;
   width: 100%;
   height: 100vh;
-  background-image: url('../../public/background.png');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-attachment: fixed;
   display: flex;
   flex-direction: column;
   text-align: center;
+  align-items: center;
 }
