--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,4 +11,9 @@
 body {
   background-color: #202020;
   color: #fff;
+  background-image: url('../../public/background.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
 }
